RESOLVED FIXED177485
REGRESSION (222040): Google Maps Street View CrashTracer: [USER] com.apple.WebKit.WebContent.Development at com.apple.WebCore: WebCore::PropertyWrapperAcceleratedTransform::blend const + 92
https://bugs.webkit.org/show_bug.cgi?id=177485
Summary REGRESSION (222040): Google Maps Street View CrashTracer: [USER] com.apple.We...
Antti Koivisto
Reported 2017-09-26 06:24:42 PDT
> 1 com.apple.WebCore 0x0012232c WebCore::PropertyWrapperAcceleratedTransform::blend(WebCore::AnimationBase const*, WebCore::RenderStyle*, WebCore::RenderStyle const*, WebCore::RenderStyle const*, double) const + 92 2 com.apple.WebCore 0x0012229a WebCore::CSSPropertyAnimation::blendProperties(WebCore::AnimationBase const*, WebCore::CSSPropertyID, WebCore::RenderStyle*, WebCore::RenderStyle const*, WebCore::RenderStyle const*, double) + 154 3 com.apple.WebCore 0x00c992ad WebCore::KeyframeAnimation::animate(WebCore::CompositeAnimation&, WebCore::RenderStyle const&, std::__1::unique_ptr<WebCore::RenderStyle, std::__1::default_delete<WebCore::RenderStyle> >&, bool&) + 557 4 com.apple.WebCore 0x0031a0ba WebCore::CompositeAnimation::animate(WebCore::Element&, WebCore::RenderStyle const*, WebCore::RenderStyle const&) + 650 5 com.apple.WebCore 0x003922b8 WebCore::CSSAnimationController::updateAnimations(WebCore::Element&, WebCore::RenderStyle const&, WebCore::RenderStyle const*) + 216 6 com.apple.WebCore 0x010db003 WebCore::Style::TreeResolver::createAnimatedElementUpdate(std::__1::unique_ptr<WebCore::RenderStyle, std::__1::default_delete<WebCore::RenderStyle> >, WebCore::Element&, WebCore::Style::Change) + 147 7 com.apple.WebCore 0x010dacea WebCore::Style::TreeResolver::resolveElement(WebCore::Element&) + 554 8 com.apple.WebCore 0x010db516 WebCore::Style::TreeResolver::resolveComposedTree() + 614 9 com.apple.WebCore 0x010dc082 WebCore::Style::TreeResolver::resolve() + 850 10 com.apple.WebCore 0x00480384 WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) + 516 11 com.apple.WebCore 0x0003391d WebCore::Document::updateStyleIfNeeded() + 125
Attachments
patch (9.46 KB, patch)
2017-09-26 06:46 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2017-09-26 06:46:54 PDT
Antti Koivisto
Comment 2 2017-09-26 06:47:22 PDT
WebKit Commit Bot
Comment 3 2017-09-26 08:52:00 PDT
Comment on attachment 321812 [details] patch Clearing flags on attachment: 321812 Committed r222501: <http://trac.webkit.org/changeset/222501>
WebKit Commit Bot
Comment 4 2017-09-26 08:52:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.