REGRESSION (222040): Google Maps Street View CrashTracer: [USER] com.apple.WebKit.WebContent.Development at com.apple.WebCore: WebCore::PropertyWrapperAcceleratedTransform::blend const + 92 https://bugs.webkit.org/show_bug.cgi?id=177485

Reviewed by Zalan Bujtas.

Source/WebCore:

We crash when animating between two different types of transforms because renderer is null for the first frame.

Test: fast/animation/animation-mixed-transform-crash.html

* page/animation/AnimationBase.cpp:
(WebCore::AnimationBase::currentStyle const):

    Add a way to get the current style from animations.
    This is either the render style or the inital style.

* page/animation/AnimationBase.h:
* page/animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc):

    Renderer may be null when computing the first frame of the animation. Null check.

(WebCore::blendFilter):

    Here too.

* page/animation/CompositeAnimation.cpp:
(WebCore::CompositeAnimation::updateTransitions):
* page/animation/ImplicitAnimation.h:
* page/animation/KeyframeAnimation.h:

LayoutTests:

* fast/animation/animation-mixed-transform-crash-expected.html: Added.
* fast/animation/animation-mixed-transform-crash.html: Added.


Canonical link: https://commits.webkit.org/193795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222501 268f45cc-cd09-0410-ab3c-d52691b4dbfc